src/types/tests/snapshots/tgbot__types__tests__file__send_document-2.snap
---
source: src/types/tests/file.rs
expression: actual_data
---
{
  "allow_paid_broadcast": "true",
  "business_connection_id": "id",
  "callback_query_id": "cqid",
  "caption": "Caption",
  "chat_id": "1",
  "direct_messages_topic_id": "1",
  "disable_content_type_detection": "true",
  "disable_notification": "true",
  "document": "file-id",
  "message_effect_id": "effect-id",
  "message_thread_id": "1",
  "parse_mode": "Markdown",
  "protect_content": "true",
  "receiver_user_id": "999",
  "reply_markup": {
    "force_reply": true
  },
  "reply_parameters": {
    "message_id": 1
  },
  "suggested_post_parameters": {},
  "thumbnail": "https://example.com/image.jpg"
}
