src/types/tests/snapshots/tgbot__types__tests__file__send_document-4.snap
---
source: src/types/tests/file.rs
expression: actual_data
---
{
  "chat_id": "1",
  "document": "file-id",
  "parse_mode": "Markdown"
}
