src/types/tests/snapshots/tgbot__types__tests__file__send_document_entities_vs_parse_mode.snap
---
source: src/types/tests/file.rs
expression: actual_form.into_fields()
---
[
    (
        "chat_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "document",
        FormValue::Text(
            "file-id",
        ),
    ),
    (
        "parse_mode",
        FormValue::Text(
            "Markdown",
        ),
    ),
]
