src/types/tests/snapshots/tgbot__types__tests__file__send_photo-3.snap
---
source: src/types/tests/file.rs
expression: actual_data
---
{
  "caption": "caption",
  "caption_entities": [
    {
      "length": 10,
      "offset": 0,
      "type": "bold"
    }
  ],
  "chat_id": 1,
  "photo": "file-id"
}
