src/types/tests/snapshots/tgbot__types__tests__file__send_photo-4.snap
---
source: src/types/tests/file.rs
expression: actual_data
---
{
  "caption": "caption",
  "chat_id": 1,
  "parse_mode": "Markdown",
  "photo": "file-id"
}
