src/types/tests/snapshots/tgbot__types__tests__file__send_photo.snap
---
source: src/types/tests/file.rs
expression: actual_data
---
{
  "chat_id": 1,
  "photo": "file-id"
}
