src/types/tests/snapshots/tgbot__types__tests__file__send_photo_entities_vs_parse_mode-2.snap
---
source: src/types/tests/file.rs
expression: actual_form
---
Form {
    fields: {
        "caption_entities": FormValue::Text(
            "[{\"offset\":0,\"length\":10,\"type\":\"bold\"}]",
        ),
        "photo": FormValue::Text(
            "file-id",
        ),
        "chat_id": FormValue::Text(
            "1",
        ),
    },
}
